--- a/openatlas/templates/sql/index.html
+++ b/openatlas/templates/sql/index.html
@@ -4,5 +4,24 @@
     > SQL
 {% endblock %}
 {% block content %}
-    <p><a href="{{ url_for('sql_execute') }}">{{ _('execute')|uc_first }}</a></p>
+    {{ 'SQL'|manual_link|safe }}
+    <h2 class="error">
+        {{ _('Warning: direct database manipulation is dangerous and can result in data loss and/or an unusable application!') }}
+    </h2>
+    <p>
+        <input id="sql_risk_aware" type="checkbox">
+        {{ _("I'm aware of the risk, have read the documentation and made a database backup.") }}
+    </p>
+    <p>
+        <a id="proceed_link" class="button" href="">{{ _('proceed')|uc_first }}</a>
+    </p>
+    <script>
+        $('#sql_risk_aware').change(function() {
+            if (this.checked) {
+                $("#proceed_link").attr("href", "{{ url_for('sql_execute') }}")
+            } else {
+                $("#proceed_link").attr("href", "")
+            }
+        });
+    </script>
 {% endblock %}
