--- a/openatlas/templates/sql/execute.html
+++ b/openatlas/templates/sql/execute.html
@@ -6,8 +6,21 @@
 {% endblock %}
 {% block content %}
     {{ 'SQL'|manual_link|safe }}
-    {{ form|display_form|safe }}
-    <p>
-        {{ response|safe }}
-    </p>
+    {% if file_data['file'] %}
+        <p style="margin-top: 1em;">
+            {{ _('latest backup')|uc_first }}: {{ file_data['file'] }}, {{ file_data['size'] }},
+            <a href="{{ url_for('download_sql', filename=file_data['file']) }}">{{ _('download')|uc_first }}</a>
+        </p>
+    {% endif %}
+    {% if file_data['backup_to_old'] %}
+        <p>
+            {{ _('There seemed to be no recent backup, please make one') }}
+            <a href="{{ url_for('export_sql') }}">{{ _('here') }}</a>.
+        </p>
+    {% else %}
+        {{ form|display_form|safe }}
+        <p>
+            {{ response|safe }}
+        </p>
+    {% endif %}
 {% endblock %}
