--- a/openatlas/templates/file/view.html
+++ b/openatlas/templates/file/view.html
@@ -34,7 +34,7 @@
         <h1>{{ entity.name }}</h1>
         <div>
             <div style="float:left;">
-                {{ tables['info']|data_table|safe }}
+                {{ info|display_info|safe }}
             </div>
             <div class="preview" style="float:left;">
                 {% if preview %}
