--- a/openatlas/templates/model/index.html
+++ b/openatlas/templates/model/index.html
@@ -24,7 +24,7 @@
                 (form.property.label, form.property|string + 'property'|table_select_model(property)),
                 (form.range.label, form.range|string + 'range'|table_select_model(range)),
             ] %}
-            {{ data|data_table|safe }}
+            {{ data|display_info|safe }}
             <input type="submit" value="{{ _('test')|uc_first }}">
         </form>
         {% if test_result %}
