menu, breadcrumbs, buttons

--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -562,3 +562,8 @@ select.pagesize, select#gis {
 div.data-table div.display-none {
     display: none;
 }
+
+/*bootstrap mods*/
+.navbar {
+    width: 100%;
+}
