--- a/openatlas/templates/actor/view.html
+++ b/openatlas/templates/actor/view.html
@@ -43,8 +43,8 @@
     </div>
     <div id="tab-source">
         {% if 'contributor'|is_authorized %}
-            <div class="button-bar">
-                <a href="{{ url_for('actor_add_source', id_=actor.id)}}">{{ _('add')|uc_first }}</a>
+            <div>
+            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('actor_add_source', id_=actor.id)}}">{{ _('add')|uc_first }}</a>
                 <a href="{{ url_for('source_insert', origin_id=actor.id) }}">+ {{ _('source')|uc_first }}</a>
             </div>
         {% endif %}
@@ -52,8 +52,8 @@
     </div>
     <div id="tab-event">
         {% if 'contributor'|is_authorized %}
-            <div class="button-bar">
-                <a href="{{ url_for('involvement_insert', origin_id=actor.id)}}">{{ _('add')|uc_first }}</a>
+            <div>
+            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('involvement_insert', origin_id=actor.id)}}">{{ _('add')|uc_first }}</a>
                 {% for code in config['CLASS_CODES']['event'] %}
                     <a href="{{ url_for('event_insert', code=code, origin_id=actor.id) }}">+ {{ code|get_class_name }}</a>
                 {% endfor %}
@@ -63,8 +63,8 @@
     </div>
     <div id="tab-relation">
         {% if 'contributor'|is_authorized %}
-            <div class="button-bar">
-                <a href="{{ url_for('relation_insert', origin_id=actor.id)}}">{{ _('add')|uc_first }}</a>
+            <div>
+            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('relation_insert', origin_id=actor.id)}}">{{ _('add')|uc_first }}</a>
                 {% for code in config['CLASS_CODES']['actor'] %}
                     <a href="{{ url_for('actor_insert', code=code, origin_id=actor.id) }}">+ {{ code|get_class_name }}</a>
                 {% endfor %}
@@ -74,8 +74,8 @@
     </div>
     <div id="tab-member-of">
         {% if 'contributor'|is_authorized %}
-            <div class="button-bar">
-                <a href="{{ url_for('membership_insert', origin_id=actor.id)}}">{{ _('add')|uc_first }}</a>
+            <div>
+            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('membership_insert', origin_id=actor.id)}}">{{ _('add')|uc_first }}</a>
             </div>
         {% endif %}
         {{ tables['member_of'].display('member_of')|safe }}
@@ -83,8 +83,8 @@
     {% if tables['member'] %}
         <div id="tab-member">
             {% if 'contributor'|is_authorized %}
-                <div class="button-bar">
-                    <a href="{{ url_for('member_insert', origin_id=actor.id)}}">{{ _('add')|uc_first }}</a>
+                <div>
+            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('member_insert', origin_id=actor.id)}}">{{ _('add')|uc_first }}</a>
                 </div>
             {% endif %}
             {{ tables['member'].display('member')|safe }}
@@ -92,8 +92,8 @@
     {% endif %}
     <div id="tab-reference">
         {% if 'contributor'|is_authorized %}
-            <div class="button-bar">
-                <a href="{{ url_for('actor_add_reference', id_=actor.id)}}">{{ _('add')|uc_first }}</a>
+            <div>
+            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('actor_add_reference', id_=actor.id)}}">{{ _('add')|uc_first }}</a>
                 <a href="{{ url_for('reference_insert', code='bibliography', origin_id=actor.id) }}">+ {{ _('bibliography')|uc_first }}</a>
                 <a href="{{ url_for('reference_insert', code='edition', origin_id=actor.id) }}">+ {{ _('edition')|uc_first }}</a>
                 <a href="{{ url_for('reference_insert', code='external_reference', origin_id=actor.id) }}">+ {{ _('external reference')|uc_first }}</a>
@@ -103,8 +103,8 @@
     </div>
     <div id="tab-file">
         {% if 'contributor'|is_authorized %}
-            <div class="button-bar">
-                <a href="{{ url_for('actor_add_file', id_=actor.id)}}">{{ _('add')|uc_first }}</a>
+            <div>
+            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('actor_add_file', id_=actor.id)}}">{{ _('add')|uc_first }}</a>
                 <a href="{{ url_for('file_insert', origin_id=actor.id) }}">+ {{ _('file')|uc_first }}</a>
             </div>
         {% endif %}
