--- a/openatlas/templates/admin/check_link_duplicates.html
+++ b/openatlas/templates/admin/check_link_duplicates.html
@@ -6,8 +6,8 @@
 {% block content %}
     {{ 'Data_integrity'|manual_link|safe }}
     {% if duplicates %}
-        <div class="button-bar">
-            <a href="{{ url_for('admin_check_link_duplicates', delete='delete') }}">{{ _('delete link duplicates')|uc_first }}</a>
+        <div>
+            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('admin_check_link_duplicates', delete='delete') }}">{{ _('delete link duplicates')|uc_first }}</a>
         </div>
         {{ table.display()|safe }}
     {% elif table.rows %}
