--- a/openatlas/templates/admin/general.html
+++ b/openatlas/templates/admin/general.html
@@ -5,8 +5,8 @@
 {% endblock %}
 {% block content %}
     {{ 'General'|manual_link|safe }}
-    <div class="button-bar">
-        <a href="{{ url_for('admin_general_update') }}">{{ _('edit')|uc_first }}</a>
+    <div>
+            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('admin_general_update') }}">{{ _('edit')|uc_first }}</a>
     </div>
     <div class="data-table">
         {% for name, value in general_settings.items() %}
