--- a/openatlas/templates/admin/orphans.html
+++ b/openatlas/templates/admin/orphans.html
@@ -16,8 +16,8 @@
     </ul>
     <div id="tab-orphan">
         {% if tables['orphans'].rows and 'admin'|is_authorized %}
-            <div class="button-bar">
-                <a onclick="return confirm('{{_('delete orphans')|uc_first }}?')"
+            <div>
+            <a class="btn btn-outline-primary btn-sm" onclick="return confirm('{{_('delete orphans')|uc_first }}?')"
                    href="{{ url_for('admin_orphans_delete', parameter='orphans') }}">{{ _('delete orphans')|uc_first }}</a>
             </div>
         {% endif %}
@@ -36,8 +36,8 @@
     </div>
     <div id="tab-nodes">
         {% if tables['nodes'].rows and 'admin'|is_authorized %}
-            <div class="button-bar">
-                <a onclick="return confirm('{{_('delete types')|uc_first }}?')"
+            <div>
+            <a class="btn btn-outline-primary btn-sm" onclick="return confirm('{{_('delete types')|uc_first }}?')"
                    href="{{ url_for('admin_orphans_delete', parameter='types') }}">{{ _('delete types')|uc_first }}</a>
             </div>
         {% endif %}
@@ -56,8 +56,8 @@
     </div>
     <div id="tab-orphaned-files">
         {% if tables['orphaned_files'].rows and 'admin'|is_authorized %}
-            <div class="button-bar">
-                <a onclick="return confirm('{{_('delete all files without corresponding entities?')|uc_first }}')"
+            <div>
+            <a class="btn btn-outline-primary btn-sm" onclick="return confirm('{{_('delete all files without corresponding entities?')|uc_first }}')"
                    href="{{ url_for('admin_file_delete', filename='all') }}">{{ _('delete all files')|uc_first }}</a>
             </div>
         {% endif %}
