--- a/openatlas/templates/file/index.html
+++ b/openatlas/templates/file/index.html
@@ -4,8 +4,8 @@
 {% endblock %}
 {% block content %}
     {% if 'contributor'|is_authorized %}
-        <div class="button-bar">
-            <a href="{{ url_for('file_insert') }}">+ {{ _('file')|uc_first }}</a>
+        <div>
+            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('file_insert') }}">+ {{ _('file')|uc_first }}</a>
         </div>
     {% endif %}
     {{ _('total disk space')|uc_first }} <strong>{{ disk_space_values.total }}</strong> -
