--- a/openatlas/templates/overlay/update.html
+++ b/openatlas/templates/overlay/update.html
@@ -6,8 +6,8 @@
     > {{ _('update')|uc_first }} {{ _('overlay')|uc_first }}
 {% endblock %}
 {% block content %}
-    <div class="button-bar">
-        <a href="{{ url_for('overlay_remove', id_=overlay.id, place_id=place.id) }}" onclick="return confirm('{{ _('remove')|uc_first }}?');">
+    <div>
+            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('overlay_remove', id_=overlay.id, place_id=place.id) }}" onclick="return confirm('{{ _('remove')|uc_first }}?');">
             {{ _('remove')|uc_first }}
         </a>
     </div>
