--- a/openatlas/templates/reference/view.html
+++ b/openatlas/templates/reference/view.html
@@ -42,8 +42,8 @@
         {% if name not in ['feature', 'stratigraphic-unit', 'find'] or tables[name].rows %}
             <div id="tab-{{name}}">
                 {% if 'contributor'|is_authorized and name not in ['feature', 'stratigraphic-unit', 'find'] %}
-                    <div class="button-bar">
-                        <a href="{{ url_for('reference_add', id_=reference.id, class_name=name)}}">{{ _('add')|uc_first }}</a>
+                    <div>
+            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('reference_add', id_=reference.id, class_name=name)}}">{{ _('add')|uc_first }}</a>
                         {% if name == 'place' %}
                             <a href="{{ url_for('place_insert', origin_id=reference.id) }}">+ {{ _('place')|uc_first }}</a>
                         {% elif name == 'source' %}
