--- a/openatlas/templates/user/index.html
+++ b/openatlas/templates/user/index.html
@@ -6,8 +6,8 @@
 {% block content %}
     {{ 'User'|manual_link|safe }}
     {% if 'manager'|is_authorized %}
-        <div class="button-bar">
-            <a href="{{ url_for('user_insert') }}">+ {{ _('user')|uc_first }}</a>
+        <div>
+            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('user_insert') }}">+ {{ _('user')|uc_first }}</a>
         </div>
     {% endif %}
     {{ table.display()|safe }}
