--- a/openatlas/templates/admin/mail.html
+++ b/openatlas/templates/admin/mail.html
@@ -5,8 +5,8 @@
 {% endblock %}
 {% block content %}
     {{ 'Mail'|manual_link|safe }}
-    <div class="button-bar">
-        <a href="{{ url_for('admin_mail_update') }}">{{ _('edit')|uc_first }}</a>
+    <div>
+            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('admin_mail_update') }}">{{ _('edit')|uc_first }}</a>
     </div>
     <div class="data-table">
         {% for name, value in mail_settings.items() %}
