--- a/openatlas/templates/content/view.html
+++ b/openatlas/templates/content/view.html
@@ -5,8 +5,8 @@
     > {{ _(item)|uc_first }}
 {% endblock %}
 {% block content %}
-    <div class="button-bar">
-        <a href="{{ url_for('content_update', item=item) }}">{{ _('edit')|uc_first }}</a>
+    <div>
+            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('content_update', item=item) }}">{{ _('edit')|uc_first }}</a>
     </div>
     {% for language, text in content[item].items() %}
         <p class="inverse-heading">{{ language|upper }}</p>
