--- a/openatlas/templates/import/index.html
+++ b/openatlas/templates/import/index.html
@@ -6,8 +6,8 @@
 {% block content %}
     {{ 'Import'|manual_link|safe }}
     {% if 'admin'|is_authorized %}
-        <div class="button-bar">
-            <a href="{{ url_for('import_project_insert') }}">+ {{ _('project')|uc_first }}</a>
+        <div>
+            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('import_project_insert') }}">+ {{ _('project')|uc_first }}</a>
         </div>
     {% endif %}
     {{ table.display()|safe }}
