--- a/openatlas/templates/import/project_view.html
+++ b/openatlas/templates/import/project_view.html
@@ -14,16 +14,16 @@
     </ul>
     <div id="tab-info">
         {% if 'manager'|is_authorized %}
-            <div class="button-bar">
-                <a href="{{ url_for('import_project_update', id_=project.id)}}">{{ _('edit')|uc_first }}</a>
+            <div>
+            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('import_project_update', id_=project.id)}}">{{ _('edit')|uc_first }}</a>
                 <a href="{{ url_for('import_project_delete', id_=project.id) }}"
                     onclick="return confirm('{{ _('Delete %(name)s?', name=project.name|replace("'", "")) }}')">
                     {{ _('delete')|uc_first }}
                 </a>
             </div>
             <p>{{ _('new import')|uc_first }}:</p>
-            <div class="button-bar">
-                <a href="{{ url_for('import_data', project_id=project.id, class_code='E33') }}">{{ 'source'|uc_first }}</a>
+            <div>
+            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('import_data', project_id=project.id, class_code='E33') }}">{{ 'source'|uc_first }}</a>
                 {% for code in config['CLASS_CODES']['event'] + config['CLASS_CODES']['actor'] %}
                     <a href="{{ url_for('import_data', project_id=project.id, class_code=code) }}">{{ code|get_class_name }}</a>
                 {% endfor %}
