--- a/openatlas/templates/place/index.html
+++ b/openatlas/templates/place/index.html
@@ -6,8 +6,8 @@
     <div style="float:left;">
         {{ 'Place'|manual_link|safe }}
         {% if 'contributor'|is_authorized %}
-            <div class="button-bar">
-                <a href="{{ url_for('place_insert') }}">+ {{ _('place')|uc_first }}</a>
+            <div>
+            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('place_insert') }}">+ {{ _('place')|uc_first }}</a>
             </div>
         {% endif %}
         {{ table.display()|safe }}
