--- a/openatlas/templates/profile/index.html
+++ b/openatlas/templates/profile/index.html
@@ -5,8 +5,8 @@
 {% block content %}
     {{ 'Profile'|manual_link|safe }}
     {% if not config['DEMO_MODE'] %}
-        <div class="button-bar">
-            <a href="{{ url_for('profile_update') }}">{{ _('edit')|uc_first }}</a>
+        <div>
+            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('profile_update') }}">{{ _('edit')|uc_first }}</a>
             <a href="{{ url_for('profile_password') }}">{{ _('change password')|uc_first }}</a>
         </div>
     {% endif %}
