--- a/openatlas/templates/source/index.html
+++ b/openatlas/templates/source/index.html
@@ -3,10 +3,10 @@
     {{ _('source')|uc_first }}
 {% endblock %}
 {% block content %}
-    {{ 'Source'|manual_link|safe }}
+    {{ 'source'|manual_link|safe }}
     {% if 'contributor'|is_authorized %}
-        <div class="button-bar">
-            <a href="{{ url_for('source_insert') }}">+ {{ _('source')|uc_first }}</a>
+        <div>
+            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('source_insert') }}">+ {{ _('source')|uc_first }}</a>
         </div>
     {% endif %}
     {{ table.display()|safe }}
