--- a/openatlas/templates/actor/index.html
+++ b/openatlas/templates/actor/index.html
@@ -5,9 +5,9 @@
 {% block content %}
     {{ 'Actor'|manual_link|safe }}
     {% if 'contributor'|is_authorized %}
-        <div class="button-bar">
+        <div>
             {% for code in config['CLASS_CODES']['actor']%}
-                <a href="{{ url_for('actor_insert', code=code) }}">+ {{ code|get_class_name }}</a>
+                <a class="btn btn-outline-primary btn-sm" href="{{ url_for('actor_insert', code=code) }}">+ {{ code|get_class_name }}</a>
             {% endfor %}
         </div>
     {% endif %}
