--- a/openatlas/templates/reference/index.html
+++ b/openatlas/templates/reference/index.html
@@ -7,8 +7,8 @@
     {% if 'contributor'|is_authorized %}
         <div>
             <a class="btn btn-outline-primary btn-sm" href="{{ url_for('reference_insert', code='bibliography') }}">+ {{ _('bibliography')|uc_first }}</a>
-            <a href="{{ url_for('reference_insert', code='edition') }}">+ {{ _('edition')|uc_first }}</a>
-            <a href="{{ url_for('reference_insert', code='external_reference') }}">+ {{ _('external reference')|uc_first }}</a>
+            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('reference_insert', code='edition') }}">+ {{ _('edition')|uc_first }}</a>
+            <a class="btn btn-outline-primary btn-sm" href="{{ url_for('reference_insert', code='external_reference') }}">+ {{ _('external reference')|uc_first }}</a>
         </div>
     {% endif %}
     {{ table.display()|safe }}
