--- a/openatlas/templates/422.html
+++ b/openatlas/templates/422.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    418 - I’m a teapot
+    418 - Unprocessable entity
 {% endblock %}
 {% block content %}
 <div style="text-align:center;padding-top:1em;">
@@ -14,8 +14,8 @@
         The application encountered an "unprocessable entity" error. If this problem persists please inform the site administrator.
     </p>
     <p>
-        <img src="/static/images/layout/422.jpg" alt="422 - unprocessable entity"><br />
-        Spock at console (Taken from commons.wikimedia.org, author: NBC Television, license: public domain)
+        <img src="/static/images/layout/422.jpg" alt="422 - unprocessable entity"><br>
+        Spock at console (from commons.wikimedia.org, author: NBC Television, license: public domain)
     </p>
 </div>
 {% endblock %}
