--- a/openatlas/templates/400.html
+++ b/openatlas/templates/400.html
@@ -16,5 +16,10 @@
     <p>
         {{ _("Please let us know if you think it's a bug") }}: <a href="{{ url_for('index_feedback') }}">{{ _('feedback')|uc_first }}</a>
     <p/>
+    <p>
+        <img src="/static/images/layout/400.jpg" alt="400 - Bad Request"><br>
+        From commons.wikimedia.org<br>
+        Oseberg ship excavation 1904. Photo Olaf Væring, Kulturhistorisk museum UiO Oslo, Norway. License CC BY-SA 4.0
+    </p>
 </div>
 {% endblock %}
