--- a/openatlas/templates/index/credits.html
+++ b/openatlas/templates/index/credits.html
@@ -52,30 +52,24 @@
 </div>
 <h1>Team</h1>
 <p>
-    <strong>Stefan Eichert</strong><br/>
-    Idea, Concept and Data Modelling
+    Stefan Eichert (Idea, Concept and Data Modelling)
 </p>
 <p>
-    <strong>Alexander Watzinger</strong><br/>
-    Software Development, Concept
+    Alexander Watzinger (Lead Developer and Concept)
 </p>
 <p>
-    <strong>Bernhard Koschicek</strong><br/>
-    Software Development
+    Bernhard Koschicek (Software Development)
 </p>
 <p>
-    <strong>Christoph Hoffmann</strong><br/>
-    Frontend Development
+    Christoph Hoffmann (Frontend Development)
 </p>
 <p>
-    <strong>Jan Belik</strong><br/>
-    Logo Design and Design Consulting
+    Jan Belik (Logo Design and Design Consulting)
 </p>
 <p>
-    <strong>Daniel Kittel</strong><br/>
-    Quality Assurance
+    Daniel Kittel (Quality Assurance)
 </p>
-<h2>Contributors</h2>
+<h1>Contributors</h1>
 <p>These people supported us in many different ways. Our thanks goes to all of them.</p>
 <p>
     Asil Çetin<br/>
@@ -85,6 +79,7 @@
     Judith Pucher<br/>
     Katharina Winckler<br/>
     Mihailo Popović<br/>
+    Nina Brundke<br/>
     Peter Andorfer<br/>
     Petra Heinicker<br/>
     Sandra Lehecka<br/>
