--- a/openatlas/templates/index/changelog.html
+++ b/openatlas/templates/index/changelog.html
@@ -19,7 +19,7 @@
                         &#8226 {{ issue_type|uc_first }}
                         <a target="_blank" rel="noopener" href="https://redmine.openatlas.eu/issues/{{ issue_number }}">
                             #{{ issue_number }}
-                        </a> {{ issue_text|safe }}<br />
+                        </a> {{ issue_text|safe }}<br>
                     {% else %}
                         &#8226 {{ issue_text|safe }}
                     {% endif %}
