--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -55,7 +55,7 @@
         </title>
     </head>
     <body>
-        <div id="header">
+ <!--       <div id="header">
             <div id="logo">
                 <a href="/">{{ session['settings']['logo_file_id']|display_logo|safe }}</a>
             </div>
@@ -73,14 +73,6 @@
                 {% endwith %}
             </div>
             <div id="header-menu">
-                <div style="float: right">
-                    <span style="font-size: 30px; color: Dodgerblue;">
-                        <i class="fas fa-cog"></i>
-                    </span>
-                    <span style="font-size: 30px; color: Dodgerblue;">
-                        <i class="far fa-user"></i>
-                    </span>
-                </div>
                 <div>
                     {{ _('version')|uc_first }} {{ config['VERSION'] }} -
                     <a href="{{ url_for('index_changelog') }}">{{ _('changelog')|uc_first }}</a>
@@ -104,24 +96,13 @@
                     <div style="clear:both;"></div>
                 {% endif %}
                 <div>
-                <div class="btn-group btn-group-toggle">
-                    {% for language in config['LANGUAGES'].keys()|sort %}
-                        {% if 'language' in session and session['language'] == language %}
-                            <span class="btn btn-secondary active btn-sm">{{ language|upper }}</span>
-                        {% else %}
-                            <a class="btn btn-secondary btn-sm" href="{{ url_for('set_locale', language=language) }}">{{ language|upper }}</a>
-                        {% endif %}
-                    {% endfor %}
-                </div>
-                    {% if current_user.is_authenticated %}
-                        <a class="btn btn-warning btn-sm" href="/logout">{{ _('logout')|uc_first }}</a>
-                    {% else %}
-                        <a class="btn btn-warning btn-sm" href="/login">{{ _('login')|uc_first }}</a>
-                    {% endif %}
-                </div>
+
             </div>
         </div>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+-->        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <a class="navbar-brand" href="/">
+            <img src="/static/images/layout/logo_small.png" height="40px" alt="Logo">
+          </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -139,6 +120,33 @@
                     </form>
                 </div>
             {% endif %}
+                <div style="float: right">
+                    <a href="">
+                        <span style="font-size: 25px; color: gray;">
+                            <i class="fas fa-search"></i>
+                        </span>
+                    </a>
+                    <a href="">
+                        <span style="font-size: 25px; color: gray;">
+                            <i class="far fa-user"></i>
+                        </span>
+                    </a>
+                    <div class="btn-group btn-group-toggle">
+                        {% for language in config['LANGUAGES'].keys()|sort %}
+                            {% if 'language' in session and session['language'] == language %}
+                                <span class="btn btn-secondary active btn-sm">{{ language|upper }}</span>
+                            {% else %}
+                                <a class="btn btn-secondary btn-sm" href="{{ url_for('set_locale', language=language) }}">{{ language|upper }}</a>
+                            {% endif %}
+                        {% endfor %}
+                    </div>
+                        {% if current_user.is_authenticated %}
+                            <a class="btn btn-warning btn-sm" href="/logout">{{ _('logout')|uc_first }}</a>
+                        {% else %}
+                            <a class="btn btn-warning btn-sm" href="/login">{{ _('login')|uc_first }}</a>
+                        {% endif %}
+                    </div>
+                </div>
         </nav>
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
