Added Moving Byzantium project to credits

--- a/openatlas/templates/index/credits.html
+++ b/openatlas/templates/index/credits.html
@@ -14,8 +14,7 @@
         <img src="/static/images/institutes/imafo.png" alt="IMAFO">
     </a>
     <a target="_blank" rel="noopener" href="https://www.oeaw.ac.at/acdh">
-        <img src="/static/images/institutes/acdh.png"
-             alt="ACDH - Austrian Centre for Digital Humanities">
+        <img src="/static/images/institutes/acdh.png" alt="ACDH - Austrian Centre for Digital Humanities">
     </a>
     <a target="_blank" rel="noopener" href="https://erc.europa.eu/">
         <img src="/static/images/institutes/erc.png" alt="European Research Council">
@@ -34,6 +33,9 @@
     </a>
     <a target="_blank" rel="noopener" href="http://www.connectedclerics.com/">
         <img src="/static/images/projects/connec.jpg" alt="CONNEC">
+    </a>
+    <a target="_blank" rel="noopener" href="https://www.oeaw.ac.at/en/byzantine-research/byzantium-and-beyond/mobility-and-intercultural-contacts/moving-byzantium/">
+        <img src="/static/images/projects/moving_byzantium.jpg" alt="Moving Byzantium">
     </a>
     <a target="_blank" rel="noopener" href="https://dpp.oeaw.ac.at/">
         <img src="/static/images/projects/dpp.jpg" alt="DPP">
